# admiralfeb.dev-rust

./: Cargo.toml  index.html  readme.md
src/: app.rs  home.rs  main.rs  navbar.rs
