[package]
name = "rust-admiralfeb-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "serde", "nightly"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
styled = { version = "0.2.0", features = ["csr"] }
stylist = "0.13.0"
